@@ -67,6 +67,17 @@ Fixes:
   the setup file with all directorys and installation is passed.
 
 
+----------------------------------------------------------------------------------------------------
+Date : 08.23.2010 | Release : 0.6.14    | Author  : H.Weber | CVS:253-
+----------------------------------------------------------------------------------------------------
+
+
+Changes:
+
+
+Fixes:
+
+
 
 
 
